I've expanded the toolkit a bit

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DEEPSEEK_API_KEY='Enter your DeepSeek API-key from https://platform.deepseek.com/api_keys'
 
+TELEGRAM_BOT_TOKEN="Bot_token from BotFather"
+TELEGRAM_CHAT_ID="your chat_ID to connect your telegram to your Bot"
+
